<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Key Ring</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>   
    <string name="re_password">Re-enter Password</string> 
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_key">Select Key:</string>
    
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</string>
    
    <string-array name="options">
        <item>Front Door</item>
        <item>Back Door</item>
        <item>Garage</item>
        <item>Basement</item>
    </string-array>
    
    <string name="msg_drag_lock">Hold key and drag to lock..</string>
    <string name="msg_drag_unlock">Hold key and drag out to unlock..</string>

</resources>
